--- a/src/app/pages/detail/detail.page.html
+++ b/src/app/pages/detail/detail.page.html
@@ -1,16 +1,16 @@
 
 
-<!--gt-text: <gt-text mode="EDIT" [(model)]="section.content"></gt-text>-->
+<!--gt-text: <gt-text mode="EDIT" [(model)]="section.text"></gt-text>-->
 <!--<br/>-->
-<!--gt-paragraph: <gt-paragraph  mode="EDIT" [data]="content"></gt-paragraph>-->
+<!--gt-paragraph: <gt-paragraph  mode="EDIT" [data]="text"></gt-paragraph>-->
 <!--<br/>-->
 <!--<span> hello </span>-->
 
 <!--<br>-->
 <!--gt-section:-->
-<gt-section mode="EDIT" [(model)]="section">
+<!--<gt-section mode="EDIT" [(model)]="section">-->
 
-</gt-section>
+<!--</gt-section>-->
 <br/>
 <pre>{{section | json}}</pre>
 
@@ -18,6 +18,6 @@
 <br/>
 <br/>
 <br/>
-<gt-article mode="EDIT"  [(model)]="article"></gt-article>
+<!--<gt-article mode="EDIT"  [(model)]="article"></gt-article>-->
 <br/>
 <pre>{{article | json}}</pre>
