--- a/src/app/pages/detail/detail.page.html
+++ b/src/app/pages/detail/detail.page.html
@@ -1,23 +1,23 @@
 
 
-<!--gt-text: <gt-text mode="EDIT" [(model)]="section.text"></gt-text>-->
+<!--&lt;!&ndash;gt-text: <gt-text mode="EDIT" [(model)]="section.text"></gt-text>&ndash;&gt;-->
+<!--&lt;!&ndash;<br/>&ndash;&gt;-->
+<!--&lt;!&ndash;gt-paragraph: <gt-paragraph  mode="EDIT" [data]="text"></gt-paragraph>&ndash;&gt;-->
+<!--&lt;!&ndash;<br/>&ndash;&gt;-->
+<!--&lt;!&ndash;<span> hello </span>&ndash;&gt;-->
+
+<!--&lt;!&ndash;<br>&ndash;&gt;-->
+<!--&lt;!&ndash;gt-section:&ndash;&gt;-->
+<!--&lt;!&ndash;<gt-section mode="EDIT" [(model)]="section">&ndash;&gt;-->
+
+<!--&lt;!&ndash;</gt-section>&ndash;&gt;-->
 <!--<br/>-->
-<!--gt-paragraph: <gt-paragraph  mode="EDIT" [data]="text"></gt-paragraph>-->
+<!--<pre>{{section | json}}</pre>-->
+
+
 <!--<br/>-->
-<!--<span> hello </span>-->
-
-<!--<br>-->
-<!--gt-section:-->
-<!--<gt-section mode="EDIT" [(model)]="section">-->
-
-<!--</gt-section>-->
-<br/>
-<pre>{{section | json}}</pre>
-
-
-<br/>
-<br/>
-<br/>
-<!--<gt-article mode="EDIT"  [(model)]="article"></gt-article>-->
-<br/>
-<pre>{{article | json}}</pre>
+<!--<br/>-->
+<!--<br/>-->
+<!--&lt;!&ndash;<gt-article mode="EDIT"  [(model)]="article"></gt-article>&ndash;&gt;-->
+<!--<br/>-->
+<!--<pre>{{article | json}}</pre>-->
